# grimoire

./: .gitignore  .gitmodules  .licenserc.toml  .taskrc.yml  AGENTS.md  CATALOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  cliff.toml  dist-workspace.toml  taplo.toml  taskfile.yml
.claude/: rules.md  taskfile.yml
.claude/agents/: worker-architect.md  worker-architecture-explorer.md  worker-builder.md  worker-doc-reviewer.md  worker-doc-writer.md  worker-researcher.md  worker-reviewer.md  worker-tester.md
.claude/artifacts/: README.md  adr_agent_artifact_kind.md  adr_catalog_summary_annotation.md  adr_codex_vendor.md  adr_effective_set_mutations.md  adr_grim_config_command.md  adr_grim_publish.md  adr_hooks_support.md  adr_install_state_portability.md  adr_multi_registry_mcp.md  adr_oci_empty_config_compat.md  adr_projection_over_index.md  adr_registry_default_dedup.md  adr_repository_annotation.md  bugfix_plan_client_desync_tolerance.md  bugfix_plan_gitlab_registry_compat.md  bugfix_plan_shared_bundle_members.md  bugfix_plan_tui_bundle_install.md  plan_login_logout.md  plan_package_deprecation.md  plan_todo_overnight.md  plan_tui_overhaul.md  research_artifact_type_decision.md  research_community_skill_packs.md  research_ide_hooks.md  research_inrepo_authoring_distillation.md  research_opencode_copilot_types.md  research_publish_manifest.md  research_rules_agents_anthropic.md  research_skills_anthropic.md  research_state_portability.md  research_state_portability_v2.md  review_install_state_portability.md
.claude/hooks/: conventional_commit_validator.py  post_tool_use_tracker.py
.claude/rules/: arch-principles.md  docs-style.md  meta-ai-config.md  product-context.md  product-tech-strategy.md  quality-core.md  quality-rust.md  quality-security.md  subsystem-ci.md  subsystem-cli-api.md  subsystem-cli-commands.md  subsystem-cli.md  subsystem-file-structure.md  subsystem-taskfiles.md  subsystem-tests.md  workflow-bugfix.md  workflow-git.md  workflow-github.md  workflow-refactor.md  workflow-release.md  workflow-swarm.md
.claude/scripts/: README.md  statusline-install.sh
.claude/skills/architect/: SKILL.md
.claude/tests/: test_ai_config.py  test_hooks.py
.config/: nextest.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: claude.yml  docs.yml  publish-catalog.yml  publish-ocx.yml  release.yml  verify-basic.yml  verify-deep.yml
catalog/: README.md  publish.toml  taskfile.yml
catalog/bundles/: grim-essentials.toml
catalog/scripts/: publish.py
docs/: README.md  book.toml
docs/src/: SUMMARY.md  agents.md  artifacts.md  authentication.md  ci.md  commands.md  concepts.md  configuration.md  install.ps1  install.sh  installation.md  package-index.md  publishing.md  quickstart.md  self-hosted-gitlab.md  vendor-metadata.md
src/: api.rs  app.rs  auth.rs  catalog.rs  cli.rs  command.rs  config.rs  context.rs  env.rs  error.rs  install.rs  lock.rs  log_switch.rs  main.rs  mcp.rs  oci.rs  resolve.rs  skill.rs  tui.rs
src/api/: artifact_status.rs  config_report.rs  install_report.rs  login_report.rs  publish_report.rs  search_report.rs  uninstall_report.rs  update_report.rs
src/auth/: auth_error.rs  credential.rs  login.rs  prompt.rs  registry_url.rs  store.rs
src/catalog/: catalog_error.rs  catalog_service.rs  forge.rs  index_announce.rs  index_source.rs  registry_catalog.rs  search_match.rs
src/cli/: exit_code.rs  options.rs  printer.rs  progress.rs
src/command/: add.rs  build.rs  command_error.rs  config.rs  init.rs  install.rs  lock.rs  login.rs  logout.rs  mcp.rs  publish.rs  release.rs  remove.rs  schema.rs  scope_resolution.rs  search.rs  status.rs  tui.rs  uninstall.rs  update.rs
src/config/: config_error.rs  declaration.rs  global_config.rs  hash.rs  project_config.rs  registry_resolve.rs
src/install/: client_target.rs  content_hash.rs  install_error.rs  install_state.rs  installer.rs  materializer.rs  opencode_config.rs  path_anchor.rs  progress.rs  prune.rs  render.rs  status_badge.rs  target.rs  uninstall.rs  vendor.rs  vendor_claude.rs  vendor_codex.rs  vendor_copilot.rs  vendor_opencode.rs
src/lock/: advisory_lock.rs  effective_set.rs  file_lock.rs  grimoire_lock.rs  lock_io.rs  locked_bundle.rs
src/mcp/: server.rs  state.rs  tool_args.rs
src/oci/: access.rs  annotations.rs  artifact_kind.rs  digest.rs  identifier.rs  manifest.rs  pinned_identifier.rs  reference.rs  release.rs  tag_cache.rs
src/oci/access/: error.rs  (+2 more)
src/resolve/: resolve_error.rs  resolve_options.rs  resolver.rs
src/skill/: agent_frontmatter.rs  skill_error.rs  skill_package.rs
src/store/: paths.rs
src/tui/: app.rs  bundle_member_fetch.rs  bundle_members.rs  detail.rs  event.rs  init_dialog.rs  install_progress.rs  render.rs  state.rs  terminal_guard.rs  tree.rs  update_check.rs
taskfiles/: coverage.taskfile.yml  release.taskfile.yml  rust.taskfile.yml  schema.taskfile.yml  shell.taskfile.yml
test/: .gitignore  README.md  conftest.py  pyproject.toml  taskfile.yml
test/manual/: .gitignore  README.md  docker-compose.yml
test/src/: __init__.py  helpers.py  registry.py  runner.py
test/tests/: conftest.py  test_add_infer.py  test_agents.py  test_build.py  test_bundles.py  test_client_desync.py  test_clients.py  test_config.py  test_config_registry.py  test_default_registry.py  test_deprecation.py  test_docs.py  test_global.py  test_index_source.py  test_init.py  test_login.py  test_manual_rig.py  test_mcp.py  test_metadata.py  test_publish.py  test_publish_announce.py  test_registries.py  test_release.py  test_search.py  test_smoke.py  test_state_portability.py  test_tui_multi_registry.py  test_uninstall.py  test_update.py  test_workflows.py
(+65 files in other folders)
