[package]
name = "grimoire"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "An OCI-backed package manager for AI skills and rules"
repository = "https://github.com/michael-herwig/grimoire"
default-run = "grim"

[[bin]]
name = "grim"
path = "src/main.rs"

[dependencies]
clap = { version = ">=4.5.57, <5", features = ["derive", "color"] }
clap_complete = "4.6.2"
anyhow = "1.0.101"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "std",
    "fmt",
    "json",
    "registry",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lints.rust]
# Single binary crate, but the domain modules are written library-style:
# panics must never cross a module boundary without caller consent.
# Tests are exempt (clippy's unwrap_used/expect_used skip #[cfg(test)]).
unsafe_code = "forbid"

[lints.clippy]
# Library-style discipline for the domain modules. Scoped so tests still
# use .unwrap()/.expect() freely (the restriction lints ignore test cfg).
unwrap_used = "warn"
expect_used = "warn"
