[package]
name = "grimoire"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "An OCI-backed package manager for AI skills and rules"
repository = "https://github.com/michael-herwig/grimoire"
default-run = "grim"

[[bin]]
name = "grim"
path = "src/main.rs"

[dependencies]
clap = { version = ">=4.5.57, <5", features = ["derive", "color"] }
clap_complete = "4.6.2"
anyhow = "1.0.101"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "std",
    "fmt",
    "json",
    "registry",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_yaml = "0.9"
semver = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
tempfile = "3"
fs4 = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
oci-client = { version = "0.16", default-features = false, features = ["rustls-tls"] }
docker_credential = "1.3"
async-trait = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "charset", "http2"] }
tar = "0.4"
ratatui = "0.29"
crossterm = "0.28"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lints.rust]
# Single binary crate, but the domain modules are written library-style:
# panics must never cross a module boundary without caller consent.
# Tests are exempt (clippy's unwrap_used/expect_used skip #[cfg(test)]).
unsafe_code = "forbid"

[lints.clippy]
# Library-style discipline for the domain modules. Scoped so tests still
# use .unwrap()/.expect() freely (the restriction lints ignore test cfg).
unwrap_used = "warn"
expect_used = "warn"
